# financial-screener

./: .claude.md  .clauderc  Dockerfile.test  README.md  SCHEMA_DESIGN.md  pyproject.toml
.claude/skills/: airflow-3-specialist.skill
airflow/: CONNECTIVITY_TEST_RESULTS.md  DAG_TESTING_SUMMARY.md  DATE_LOGIC_EXPLAINED.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FILE_TREE.txt  HISTORICAL_LOAD_GUIDE.md  HOW_TO_REPROCESS_DATA.md  IMPLEMENTATION_SUMMARY.md  README.md
airflow/docs/: 01_ARCHITECTURE_OVERVIEW.md  02_METADATA_SCHEMA_DESIGN.md  03_DELTA_PROCESSING_STRATEGY.md  07_DEPLOYMENT_GUIDE.md  08_MONITORING_OBSERVABILITY.md  09_TROUBLESHOOTING.md
config/: model-config.yaml
config/tickers/: README.md  bme.txt  cac40.txt  dax40.txt  euronext.txt  frankfurt.txt  ftse100.txt  ibex35.txt  lse.txt  nasdaq.txt  nyse.txt  other_european.txt  psi20.txt  six.txt  sp500.txt  test.txt  xetra.txt
database/: init-schema.sql
database/migrations/: 001_initial_schema.sql  002_enhance_assets_table.sql  003_technical_indicators_table.sql  006_api_quota_management.sql  (+4 more)
docs/: AIRFLOW_CUSTOM_IMAGE_DEPLOYMENT.md  AIRFLOW_DEPLOYMENT_ASSESSMENT.md  AIRFLOW_MIGRATION_STATUS.md  API_USAGE_DEEP_INVESTIGATION.md  API_vs_DATABASE_MAPPING.md  BACKUP_AND_DISASTER_RECOVERY_STRATEGY.md  CONFIG_TUNING.md  DAG_REFACTORING_PROGRESS.md  DBEAVER_CONNECTION.md  DEPLOYMENT_GUIDE_TECHNICAL_INDICATORS.md  EODHD_DATA_COVERAGE.md  NEWS_SENTIMENT_COLLECTION_STRATEGY.md  NEXT_PHASE_BUILD_PLAN.md  PERFORMANCE_AND_STABILITY_ASSESSMENT.md  PHASE1_API_USAGE_ANALYSIS.md  PROJECT_MODULARITY_ASSESSMENT.md  PROJECT_ORGANIZATION_ANALYSIS.md  REFACTORING_PHASE1_COMPLETE.md  REVISED_LOADING_STRATEGY.md  SAFE_TO_DELETE.md  TECHNICAL_INDICATORS_IMPLEMENTATION.md  TECHNICAL_INDICATORS_STATUS.md  UNIFIED_DAG_BACKFILL_IMPLEMENTATION.md  UTILS_MODULE_BEST_PRACTICES.md
kubernetes/: airflow-git-sync-config.yaml  airflow-values-gitsync.yaml  airflow-webui-nodeport.yaml  build-job.yaml  configmap-model-config.yaml  cronjob-data-collector.yaml  deploy-analyzer.yaml  job-comprehensive-fundamentals.yaml  job-historical-load-first-run.yaml  job-historical-load-phase1.yaml  job-phase1-us-markets.yaml  job-technical-indicators.yaml  job-test-enhanced-collection.yaml  job-test-exchanges.yaml  job-test-indicators-patched.yaml  secret-alphavantage.yaml  secret-data-apis.yaml  velero-postgres-hooks-airflow.yaml
scripts/: build-and-distribute-airflow.sh  build-and-distribute-data-collector.sh  build-and-distribute-technical-analyzer.sh  build_ticker_lists.py  deploy-to-cluster.sh  distribute-image.sh  health-check.sh  monitor-phase1.sh  pre-deploy-check.sh  refresh_ticker_lists.py  run_tests.sh  test-cluster-deployment.sh  test-comprehensive-fundamentals.py  test-db-connection.sh
services/: README.md
(+99 files in other folders)
